<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/MA_viewpager_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/MA_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/maintab_toolbar_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/MA_radiobtn_home"
            style="@style/main_tab"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/home"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/MA_radiobtn_cart"
            style="@style/main_tab"
            android:drawableTop="@drawable/shop_selector"
            android:text="@string/cart"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/MA_radiobtn_sort"
            style="@style/main_tab"
            android:drawableTop="@drawable/sort_selector"
            android:text="@string/sort"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/MA_radiobtn_search"
            style="@style/main_tab"
            android:drawableTop="@drawable/search_selector"
            android:text="@string/search"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/MA_radiobtn_me"
            style="@style/main_tab"
            android:drawableTop="@drawable/me_selector"
            android:text="@string/me"
            android:textStyle="bold" />

    </RadioGroup>

</LinearLayout>
